docs/src/main/paradox/docs/getting-started/running-nexus/minikube/blazegraph.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: blazegraph
  namespace: nexus
  labels:
    app: blazegraph
    group: infra
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 9999
  selector:
    app: blazegraph
    group: infra
  type: ClusterIP
  sessionAffinity: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: blazegraph
  namespace: nexus
  labels:
    app: blazegraph
    group: infra
spec:
  serviceName: blazegraph
  selector:
    matchLabels:
      app: blazegraph
  replicas: 1
  template:
    metadata:
      namespace: nexus
      labels:
        app: blazegraph
        group: infra
    spec:
      containers:
      - name: blazegraph
        image: bluebrain/blazegraph-nexus:2.1.6-RC
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: storage
          mountPath: /var/lib/blazegraph/data
        ports:
        - containerPort: 9999
          name: http
        livenessProbe:
          tcpSocket:
            port: http
          failureThreshold: 5
          successThreshold: 1
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 5
        readinessProbe:
          tcpSocket:
            port: http
          failureThreshold: 30
          successThreshold: 1
          initialDelaySeconds: 15
          periodSeconds: 5
          timeoutSeconds: 5
        resources:
          requests:
            cpu: 1000m
            memory: 6Gi
          limits:
            cpu: 3800m
            memory: 6Gi
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: storage-blazegraph
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /blazegraph
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: blazegraph
  namespace: nexus
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: blazegraph
            port:
              number: 80
        path: /blazegraph
        pathType: Prefix
---
